leader board done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,174 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+        <section class="navbar-sec">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light  max-w bg-transparent mx-auto ">
+                <a class="navbar-brand d-flex align-items-center" href="#">
+                    <img class="logo" src="Icon/Group 5.png" alt="">
+                    <h4 class="text-white mx-2">Idea</h4>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ml-auto d-flex align-items-center">
+                    <li class="nav-item active mx-1">
+                      <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item mx-1">
+                      <a class="nav-link text-white" href="#">About</a>
+                    </li>
+                    <li class="nav-item mx-1">
+                      <a class="nav-link text-white" href="#">Works</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <img  class="sm-img" src="Image/Ellipse.png" alt="">
+                        </a>
+                      </li>
+                  </ul>
+                </div>
+              </nav>
+        </section>
+
+        <main>
+          <section class="max-w bg-white rounded mx-auto container mt-4 pt-4 pb-3 ">
+            <h3 id="text-lapis">Top Player</h3>
+            <div class="row py-3">
+              <div class="col-md-4 col-sm-6 d-flex align-items-center my-2">
+                <img src="Image/Ellipse.png" alt="" class="sm-img">
+                <p class="mx-2">John Smith</p>
+              </div>
+              <div class="col-md-4 col-sm-6 d-flex align-items-center my-2">
+                <img src="Image/Ellipse-1.png" alt="" class="sm-img">
+                <p class="mx-2">Pro Rasel</p>
+              </div>
+              <div class="col-md-4 col-sm-6 d-flex align-items-center my-2">
+                <img src="Image/Ellipse-2.png" alt="" class="sm-img">
+                <p class="mx-2">Abu Sufian</p>
+              </div>
+              <div class="col-md-4 col-sm-6 d-flex align-items-center my-2">
+                <img src="Image/Ellipse-3.png" alt="" class="sm-img">
+                <p class="mx-2">Shajedul Karim</p>
+              </div>
+              <div class="col-md-4 col-sm-6 d-flex align-items-center my-2">
+                <img src="Image/Ellipse-4.png" alt="" class="sm-img">
+                <p class="mx-2">Maruf Ahmed</p>
+              </div>
+              <div class="col-md-4 col-sm-6 d-flex align-items-center my-2">
+                <img src="Image/Ellipse-5.png" alt="" class="sm-img">
+                <p class="mx-2">Mujahid</p>
+              </div>
+            </div>
+            <hr>
+
+            <h3 id="text-lapis">Top Blog</h3>
+            <div class="row py-3">
+              <div class="col-md-6 d-flex my-2">
+                <img class="md-img" src="Image/Mask Group.png" alt="">
+                <div class="px-3">
+                  <h5>13 of My Favorite UI/UX Goodies</h5>
+                <p class="text-muted">By<span id="text-lapis"> Danny Sapio</span></p>
+                </div>
+              </div>
+              <div class="col-md-6 d-flex my-2">
+                <img class="md-img" src="Image/Mask Group-1.png" alt="">
+                <div class="px-3">
+                  <h5>UI cheat sheet: list vs grids</h5>
+                <p class="text-muted">By<span id="text-lapis"> Tess Gadd</span></p>
+                </div>
+              </div>
+              <div class="col-md-6 d-flex my-2">
+                <img class="md-img" src="Image/Mask Group-5.png" alt="">
+                <div class="px-3">
+                  <h5>7 typography tips for interface design</h5>
+                <p class="text-muted">By<span id="text-lapis"> Jeremiah Lam</span></p>
+                </div>
+              </div>
+              <div class="col-md-6 d-flex my-2">
+                <img class="md-img"  src="Image/Mask Group-2.png" alt="">
+                <div class="px-3">
+                  <h5>Your logo is copied</h5>
+                <p class="text-muted">By <span id="text-lapis"> Ferdinand Vogler</span></p>
+                </div>
+              </div>
+            </div>
+
+          </section>
+
+          <section class="max-w bg-white rounded mx-auto container mt-3 pt-4 pb-4 mb-4">
+            <h3 id="text-lapis">Top Player</h3>
+            <div class="card-deck">
+              <div class="card shadow border-0 mt-4">
+                <img class="card-img-top px-2 pt-2" src="Image/Mask Group-3.png" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">React - The Complete Guide 2020</h5>
+                  <p class="card-text orng">Reed Krakoff.</p>
+                </div>
+                <div class="card-footer border-0 bg-transparent d-flex align-items-center justify-content-between">
+                    <div>
+                      <img class="star" src="icon/Path_501_1_.png" alt="">
+                    <img class="star" src="icon/Path_501_1_.png" alt="">
+                    <img class="star" src="icon/Path_501_1_.png" alt="">
+                    <img class="star" src="icon/Path_501_1_.png" alt="">
+                    <img class="star" src="icon/Path_501_1_.png" alt="">
+                    <span class="text-muted"> 5.0</span>
+                    </div>
+
+                    <div class="time d-flex align-items-center p-1 ">
+                      <img class="clock" src="icon/ic_access_time_24px 1.png" alt="">
+                      <small class="time-text px-1"> 01:30 hr </small>
+                    </div>
+                </div>
+              </div>
+              <div class="card shadow border-0 mt-4">
+                <img class="card-img-top px-2 pt-2" src="Image/Group 2.png" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Powerpoint 2020 Master Powerpoint Cour</h5>
+                  <p class="card-text orng">WAlter Scott</p>
+                </div>
+                <div class="card-footer border-0 bg-transparent d-flex align-items-center justify-content-between">
+                  <div>
+                    <img class="star" src="icon/Path_501_1_.png" alt="">
+                  <img class="star" src="icon/Path_501_1_.png" alt="">
+                  <img class="star" src="icon/Path_501_1_.png" alt="">
+                  <img class="star" src="icon/Path_501_1_.png" alt="">
+                  <img class="star" src="icon/Path_501_1_.png" alt="">
+                  <span class="text-muted"> 5.0</span>
+                  </div>
+
+                  <div class="time d-flex align-items-center p-1 ">
+                    <img class="clock" src="icon/ic_access_time_24px 1.png" alt="">
+                    <small class="time-text px-1"> 01:20 hr </small>
+                  </div>
+              </div>
+              </div>
+              <div class="card shadow border-0 mt-4">
+                <img class="card-img-top px-2 pt-2" src="Image/Mask Group-4.png" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">The Complete JavaScript Course 2020</h5>
+                  <p class="card-text orng">Reed Krakoff.</p>
+                </div>
+                <div class="card-footer border-0 bg-transparent d-flex align-items-center justify-content-between">
+                  <div>
+                  <img class="star" src="icon/Path_501_1_.png" alt="">
+                  <img class="star" src="icon/Path_501_1_.png" alt="">
+                  <img class="star" src="icon/Path_501_1_.png" alt="">
+                  <img class="star" src="icon/Path_501_1_.png" alt="">
+                  <img class="star" src="icon/Path_501_1_.png" alt="">
+                  <span class="text-muted"> 5.0</span>
+                  </div>
+
+                  <div class="time d-flex align-items-center p-1 ">
+                    <img class="clock" src="icon/ic_access_time_24px 1.png" alt="">
+                    <small class="time-text px-1"> 01:40 hr </small>
+                  </div>
+              </div>
+              </div>
+            </div>
+          </section>
+        </main>
+        
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
