--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <h4 class="text-white mx-2">Idea</h4>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-Icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto d-flex align-items-center">
@@ -114,16 +114,16 @@
                 </div>
                 <div class="card-footer border-0 bg-transparent d-flex align-items-center justify-content-between">
                     <div>
-                      <img class="star" src="icon/Path_501_1_.png" alt="">
-                    <img class="star" src="icon/Path_501_1_.png" alt="">
-                    <img class="star" src="icon/Path_501_1_.png" alt="">
-                    <img class="star" src="icon/Path_501_1_.png" alt="">
-                    <img class="star" src="icon/Path_501_1_.png" alt="">
+                      <img class="star" src="Icon/Path_501_1_.png" alt="">
+                    <img class="star" src="Icon/Path_501_1_.png" alt="">
+                    <img class="star" src="Icon/Path_501_1_.png" alt="">
+                    <img class="star" src="Icon/Path_501_1_.png" alt="">
+                    <img class="star" src="Icon/Path_501_1_.png" alt="">
                     <span class="text-muted"> 5.0</span>
                     </div>
 
                     <div class="time d-flex align-items-center p-1 ">
-                      <img class="clock" src="icon/ic_access_time_24px 1.png" alt="">
+                      <img class="clock" src="Icon/ic_access_time_24px 1.png" alt="">
                       <small class="time-text px-1"> 01:30 hr </small>
                     </div>
                 </div>
@@ -136,16 +136,16 @@
                 </div>
                 <div class="card-footer border-0 bg-transparent d-flex align-items-center justify-content-between">
                   <div>
-                    <img class="star" src="icon/Path_501_1_.png" alt="">
-                  <img class="star" src="icon/Path_501_1_.png" alt="">
-                  <img class="star" src="icon/Path_501_1_.png" alt="">
-                  <img class="star" src="icon/Path_501_1_.png" alt="">
-                  <img class="star" src="icon/Path_501_1_.png" alt="">
+                    <img class="star" src="Icon/Path_501_1_.png" alt="">
+                  <img class="star" src="Icon/Path_501_1_.png" alt="">
+                  <img class="star" src="Icon/Path_501_1_.png" alt="">
+                  <img class="star" src="Icon/Path_501_1_.png" alt="">
+                  <img class="star" src="Icon/Path_501_1_.png" alt="">
                   <span class="text-muted"> 5.0</span>
                   </div>
 
                   <div class="time d-flex align-items-center p-1 ">
-                    <img class="clock" src="icon/ic_access_time_24px 1.png" alt="">
+                    <img class="clock" src="Icon/ic_access_time_24px 1.png" alt="">
                     <small class="time-text px-1"> 01:20 hr </small>
                   </div>
               </div>
@@ -158,16 +158,16 @@
                 </div>
                 <div class="card-footer border-0 bg-transparent d-flex align-items-center justify-content-between">
                   <div>
-                  <img class="star" src="icon/Path_501_1_.png" alt="">
-                  <img class="star" src="icon/Path_501_1_.png" alt="">
-                  <img class="star" src="icon/Path_501_1_.png" alt="">
-                  <img class="star" src="icon/Path_501_1_.png" alt="">
-                  <img class="star" src="icon/Path_501_1_.png" alt="">
+                  <img class="star" src="Icon/Path_501_1_.png" alt="">
+                  <img class="star" src="Icon/Path_501_1_.png" alt="">
+                  <img class="star" src="Icon/Path_501_1_.png" alt="">
+                  <img class="star" src="Icon/Path_501_1_.png" alt="">
+                  <img class="star" src="Icon/Path_501_1_.png" alt="">
                   <span class="text-muted"> 5.0</span>
                   </div>
 
                   <div class="time d-flex align-items-center p-1 ">
-                    <img class="clock" src="icon/ic_access_time_24px 1.png" alt="">
+                    <img class="clock" src="Icon/ic_access_time_24px 1.png" alt="">
                     <small class="time-text px-1"> 01:40 hr </small>
                   </div>
               </div>
